--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 abcdexxx
 <meta http-equiv="Content-Type" content="text/html" charset="utf-8"> 歡迎光臨
 <br>
-<a href=http://www.yahoo.com>
+<a href=http://www.yahoo.com.tw>yahoo</a>
